force-app/main/default/objects/Contact/fields/AtuouHeroi__c.field-meta.xml
<CustomField>
    <fullName>AtuouHeroi__c</fullName>
    <description>Identifica se o personagem já participou de ator heróicos</description>
    <inlineHelpText>Selecione &apos;Sim&apos; se já atuou em algum ato heroico;
Selecione &apos;Não&apos; se nunca atuou;
Selecione &apos;Não sei&apos; se não tem certeza.</inlineHelpText>
    <label>Já atuou como Herói?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
                <default>true</default>
                <label>Sim</label>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não sei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>