force-app/main/default/objects/Contact/fields/FeedbackTreinamento__c.field-meta.xml
<CustomField>
    <fullName>FeedbackTreinamento__c</fullName>
    <description>Campo para informar todas informações sobre o treinamento do possivel Heroi.</description>
    <inlineHelpText>Campo para informar todas informações sobre o treinamento do possivel Heroi.</inlineHelpText>
    <label>Feedback Treinamento</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>