force-app/main/default/objects/Contact/fields/Funcao__c.field-meta.xml
<CustomField>
    <fullName>Funcao__c</fullName>
    <description>Indica a função do contato para as batalhas</description>
    <inlineHelpText>Indique uma das funções do contato</inlineHelpText>
    <label>Função</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Suporte</fullName>
            </value>
            <value>
                <fullName>Explorador</fullName>
            </value>
            <value>
                <fullName>Estrategista</fullName>
            </value>
            <value>
                <fullName>Atirador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>