force-app/main/default/objects/Contact/fields/NomeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeGuerra__c</fullName>
    <description>Indique como o personagem é conhecido de modo geral.
Ex.: Homem Aranha, Hulk...</description>
    <inlineHelpText>Indique como o personagem é conhecido de modo geral.
Ex.: Homem Aranha, Hulk...</inlineHelpText>
    <label>Nome de Guerra</label>
    <length>80</length>
    <type>Text</type>
</CustomField>