force-app/main/default/objects/Contact/fields/PlanetaOrigem__c.field-meta.xml
<CustomField>
    <fullName>PlanetaOrigem__c</fullName>
    <description>Indique o planeta de origem do usuário.
Obs.: Se o campo &apos;É Terráqueo?&apos; estiver marcado, o planeta de origem automaticamente será &apos;Terra&quot;</description>
    <inlineHelpText>Indique o planeta de origem do usuário.
Obs.: Se o campo &apos;É Terráqueo?&apos; estiver marcado, o planeta de origem automaticamente será &apos;Terra&quot;</inlineHelpText>
    <label>Planeta de Origem</label>
    <length>80</length>
    <type>Text</type>
</CustomField>