force-app/main/default/objects/Contact/fields/StatusCandidato__c.field-meta.xml
<CustomField>
    <fullName>StatusCandidato__c</fullName>
    <description>Exibe os status do candidato</description>
    <inlineHelpText>Selecione uma das opções para referenciar o status atual do candidato</inlineHelpText>
    <label>Status Candidato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Análise</fullName>
                <default>true</default>
                <label>Em Análise</label>
            </value>
            <value>
                <fullName>Reprovado na Análise</fullName>
            </value>
            <value>
                <fullName>Aguardando Aprovação p/ Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado na Análise do Gestor</fullName>
            </value>
            <value>
                <fullName>Em Treinamento</fullName>
            </value>
            <value>
                <fullName>Reprovado no Treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado pelo Treinamento</fullName>
            </value>
            <value>
                <fullName>Aprovado Direto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>