force-app/main/default/objects/Contact/listViews/Leads_desqualificados.listView-meta.xml
<ListView>
    <fullName>Leads_desqualificados</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Leads desqualificados</label>
</ListView>